plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-picocli'
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-hibernate-orm'
    implementation 'io.quarkus:quarkus-flyway'

    // SQLite JDBC driver
    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
    // Hibernate SQLite dialect
    implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.4.Final'

    implementation 'dev.langchain4j:langchain4j:1.10.0'
    implementation 'dev.langchain4j:langchain4j-ollama:1.10.0'

    // For reading image EXIF metadata
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'

    // For writing/modifying image EXIF metadata
    implementation 'org.apache.commons:commons-imaging:1.0.0-alpha5'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'org.junit-pioneer:junit-pioneer:2.3.0'

    // allows retrying tests
    testImplementation "org.junit-pioneer:junit-pioneer:2.3.0"
}

group = 'org.acme'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}
